<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_view_detailed_weather_fragment_title"
        style="@style/TextStyleDetailedWeatherFragmentTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_detailed_weather_fragment_description"
        style="@style/TextStyleDetailedWeatherText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detailed_weather_fragment_text_view_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_detailed_weather_fragment_title" />

    <TextView
        android:id="@+id/text_view_detailed_weather_fragment_feels_like_temperature"
        style="@style/TextStyleDetailedWeatherText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detailed_weather_fragment_text_view_feels_like"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_detailed_weather_fragment_description" />

    <TextView
        android:id="@+id/text_view_detailed_weather_fragment_minimum_temperature"
        style="@style/TextStyleDetailedWeatherText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detailed_weather_fragment_text_view_minimum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_detailed_weather_fragment_feels_like_temperature" />

    <TextView
        android:id="@+id/text_view_detailed_weather_fragment_maximum_temperature"
        style="@style/TextStyleDetailedWeatherText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detailed_weather_fragment_text_view_maximum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_detailed_weather_fragment_minimum_temperature" />

    <TextView
        android:id="@+id/text_view_detailed_weather_fragment_humidity"
        style="@style/TextStyleDetailedWeatherText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detailed_weather_fragment_text_view_humidity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_detailed_weather_fragment_maximum_temperature" />

    <TextView
        android:id="@+id/text_view_detailed_weather_fragment_atmospheric_pressure"
        style="@style/TextStyleDetailedWeatherText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detailed_weather_fragment_text_view_pressure"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_detailed_weather_fragment_humidity" />

    <TextView
        android:id="@+id/text_view_detailed_weather_fragment_cloudness"
        style="@style/TextStyleDetailedWeatherText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detailed_weather_fragment_text_view_cloudness"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_detailed_weather_fragment_atmospheric_pressure" />

    <TextView
        android:id="@+id/text_view_detailed_weather_fragment_visibility"
        style="@style/TextStyleDetailedWeatherText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detailed_weather_fragment_text_view_visibility"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_detailed_weather_fragment_cloudness" />

    <Button
        android:id="@+id/button_detailed_weather_fragment_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detailed_weather_fragment_button_return_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_detailed_weather_fragment_visibility" />
</androidx.constraintlayout.widget.ConstraintLayout>
